fixed items' alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 body {
   display: flex;
   flex-direction: column;
-  max-width: 100%;
   margin: 0 auto;
   text-align: center;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -10,8 +9,18 @@ body {
   padding-bottom: 100px;
   margin: 0;
   place-items: center;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+.App {
+  max-width: 1280px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* vertical */
+  align-items: center;     /* horizontal */
 }
 
 h1 {
